<resources>
    <string name="app_name">Neobis_Android_Visitka</string>
    <string name="dr_novikov">Dr. Novikov</string>
    <string name="dentist">Dentist</string>
    <string name="dental_clin">Dental Clinic</string>
    <string name="your_friend">Your friendly Dental Friend</string>
    <string name="our_locatio">Our Location</string>
    <string name="shopping_ce">Shopping center Asia Mall  1st floor</string>
    <string name="open_map"> <u>Open map</u> </string>
    <string name="whatsapp">WhatsApp</string>
    <string name="mail">Email</string>
    <string name="Visitwebsite">Visit website</string>
    <string name="tocall">To call</string>
    <string name="telegram">Telegram</string>
    <string name="save_contact">Save contact</string>
    <string name="doctorsName">Doctors</string>
    <string name="geolocation">51.097488,71.414143</string>



    <string name="azamat">Dr.Novikov</string>
    <string name="azamat_profession" >Dentist</string>
    <string name="azamat_Number" >+77757777777</string>
    <string name="azamat_mail" >azamat1234@gmail.com</string>
    <string name="azamat_telegram">azamat_323</string>
    <string name="azamat_website">https://www.clinic.azamat.com</string>


    <string name="zamir">Dr.Zamir</string>
    <string name="zamir_profession" >Surgeon</string>
    <string name="zamir_Number" >+77758884844</string>
    <string name="zamir_mail" >zamir1234@gmail.com</string>
    <string name="zamir_telegram">zamir_323</string>
    <string name="zamir_website">https://www.clinic.zamir.com</string>

    <string name="munisa">Dr.Munisa</string>
    <string name="munisa_profession" >Nurse</string>
    <string name="munisa_Number" >+77753442865</string>
    <string name="munisa_mail" >munisa1234@gmail.com</string>
    <string name="munisa_telegram">munisa_323</string>
    <string name="munisa_website">https://www.clinic.munisa.com</string>

    <string name="nuka">Dr.Nurkanat</string>
    <string name="nuka_profession" >Surgeon</string>
    <string name="nuka_Number" >+77771877054</string>
    <string name="nuka_mail" >nuka1234@gmail.com</string>
    <string name="nuka_telegram">nuka_323</string>
    <string name="nuka_website">https://www.clinic.nuka.com</string>
</resources>