<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ECEFF8"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingVertical="25dp"
            android:paddingEnd="60dp"
            android:background="@color/blackblue"
            >
            <ImageView
                android:id="@+id/photoProfile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/photp_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/namedoctor"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="bottom"
                android:text="@string/dr_novikov"
                android:textAppearance="@style/open_sansbold"
                android:textColor="@color/white2"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/photoProfile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.202" />

            <TextView
                android:id="@+id/profession"
                android:layout_width="158dp"
                android:layout_height="35dp"
                android:gravity="bottom"
                android:text="@string/dentist"
                android:textAppearance="@style/open_sansbold"
                android:textColor="@color/white2"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/namedoctor"
                app:layout_constraintStart_toStartOf="@+id/namedoctor"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logoholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/companyLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/copanylogo"
            app:layout_constraintStart_toStartOf="@id/logoholder"
            app:layout_constraintTop_toTopOf="@id/logoholder" />

        <TextView
            android:id="@+id/dentalClinText"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_marginStart="35dp"
            android:gravity="bottom"
            android:text="@string/dental_clin"
            android:textAppearance="@style/halaney_demo"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/LogoText"
            app:layout_constraintStart_toEndOf="@id/companyLogo" />

        <TextView
            android:id="@+id/LogoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="58dp"
            android:gravity="bottom"
            android:text="@string/your_friend"
            android:textAppearance="@style/open_sans"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/logoholder"
            app:layout_constraintStart_toEndOf="@id/companyLogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:id="@+id/option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="30dp"
        >

        <LinearLayout
            android:id="@+id/phoneButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#FFFFFF"
            app:cardCornerRadius="20dp"
            android:padding="5dp"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/phoneImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="6dp"
                android:src="@drawable/tocall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/tocall"
                android:textColor="@color/blackblue"
                android:textAppearance="@style/open_sans"
                android:textSize="13sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/whatsappButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#FFFFFF"
            app:cardCornerRadius="20dp"
            android:padding="5dp"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/whatsappImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="6dp"
                android:src="@drawable/whatsappicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/whatsapp"
                android:textColor="@color/blackblue"
                android:textAppearance="@style/open_sans"
                android:textSize="13sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/emailButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#FFFFFF"
            app:cardCornerRadius="20dp"
            android:padding="5dp"
            android:layout_margin="4dp"
            >

            <ImageView
                android:id="@+id/emailImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="6dp"
                android:src="@drawable/mailicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/mail"
                android:textColor="@color/blackblue"
                android:textAppearance="@style/open_sans"
                android:textSize="13sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/websiteButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#FFFFFF"
            app:cardCornerRadius="20dp"
            android:padding="5dp"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/websiteImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="6dp"
                android:src="@drawable/webicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/Visitwebsite"
                android:textColor="@color/blackblue"
                android:textAppearance="@style/open_sans"
                android:textSize="13sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/telegramButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#FFFFFF"
            app:cardCornerRadius="20dp"
            android:padding="5dp"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/telegramImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="6dp"
                android:src="@drawable/telegramicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/telegram"
                android:textColor="@color/blackblue"
                android:textAppearance="@style/open_sans"
                android:textSize="13sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/saveContactButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#FFFFFF"
            app:cardCornerRadius="20dp"
            android:padding="5dp"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/saveContactImage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="6dp"
                android:src="@drawable/contacticon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/save_contact"
                android:textColor="@color/blackblue"
                android:textAppearance="@style/open_sans"
                android:textSize="13sp"/>
        </LinearLayout>



    </GridLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp">
        <TextView
            android:id="@+id/textLocation"
            android:layout_width="121dp"
            android:layout_height="25dp"
            android:text="@string/our_locatio"
            android:textAppearance="@style/open_sansbold"
            android:textColor="@color/blackblue"
            android:gravity="bottom"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="@id/locationHolder"
            app:layout_constraintStart_toStartOf="@id/locationHolder"
            />
        <TextView
            android:id="@+id/textAddress"
            android:layout_width="197dp"
            android:layout_height="44dp"
            android:text="@string/shopping_ce"
            android:textAppearance="@style/open_sans"
            android:gravity="bottom"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/textLocation"
            app:layout_constraintStart_toStartOf="@+id/locationHolder"
            />
        <TextView
            android:id="@+id/mapButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/open_map"
            android:textAppearance="@style/open_sansbold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/textAddress"
            app:layout_constraintStart_toStartOf="@+id/locationHolder"
            android:textSize="14sp"
            android:textColor="@color/purple"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>